--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,56 +1,44 @@
-name: CI
+name: Publish on Tag
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    tags:
+      - 'v*'  # Match tags starting with 'v'
 
-# cancel previous tests if new commit is pushed to PR branch
-concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
-  
 jobs:
-  build:
-
+  publish:
     runs-on: ubuntu-latest
-    
-    permissions:
-      contents: read
-      checks: write
-      
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        java-package: jdk
-        cache: gradle
-        
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2.4.2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Run tests with Gradle
-      uses: gradle/gradle-build-action@v2.4.2
-      with:
-        # build includes tests
-        arguments: |
-          build
-          --console=plain
-          --parallel
-          -Dorg.gradle.parallel.intra=true
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 23
 
-    - name: Tests Report
-      uses: dorny/test-reporter@v1
-      if: success() || failure()                    # run this step even if previous step failed
-      with:
-          name: Test Results                        # Name of the check run which will be created
-          path: '**/build/test-results/test/*.xml'  # Path to test results
-          reporter: java-junit                      # Format of test results
-          list-suites: 'failed'                     # Limits which test suites are listed: (*all/failed) *default
-          list-tests: 'failed'                      # Limits which test cases are listed: (*all/failed/none) *default
-          
+      - name: Extract version from tag
+        id: get_version
+        run: |
+          TAG_NAME=${GITHUB_REF#refs/tags/}
+          VERSION=${TAG_NAME#v}
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Build and publish to GitHub Packages
+        run: ./gradlew publish
+        env:
+          USERNAME: ${{ github.actor }}
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: ${{ env.VERSION }}
+
+#      - name: Build and publish to Maven Central
+#        run: ./gradlew publishAndReleaseToMavenCentral
+#        env:
+#          VERSION: ${{ env.VERSION }}
+#          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.SONATYPE_USERNAME }}
+#          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_PASSWORD }}
+#          ORG_GRADLE_PROJECT_signingInMemoryKey: exported_ascii_armored_key
+#          ORG_GRADLE_PROJECT_signingInMemoryKeyId: 12345678
+#          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: some_password
