--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Publish on Tag
+name: Publish package to the Maven Central Repository
 
 on:
   push:
@@ -26,19 +26,12 @@ jobs:
           VERSION=${TAG_NAME#v}
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-      - name: Build and publish to GitHub Packages
-        run: ./gradlew publish
+      - name: Build and publish to Maven Central
+        run: ./gradlew publishAndReleaseToMavenCentral
         env:
-          USERNAME: ${{ github.actor }}
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VERSION: ${{ env.VERSION }}
-
-#      - name: Build and publish to Maven Central
-#        run: ./gradlew publishAndReleaseToMavenCentral
-#        env:
-#          VERSION: ${{ env.VERSION }}
-#          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.SONATYPE_USERNAME }}
-#          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_PASSWORD }}
-#          ORG_GRADLE_PROJECT_signingInMemoryKey: exported_ascii_armored_key
-#          ORG_GRADLE_PROJECT_signingInMemoryKeyId: 12345678
-#          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: some_password
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.OSSRH_USERNAME }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.OSSRH_TOKEN }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.PGP_PRIVATE_KEY }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.PGP_KEY_ID }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.PGP_PASSPHRASE }}
