--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Build and publish to Maven Central
         run: ./gradlew publishAndReleaseToMavenCentral
         env:
-          VERSION: ${{ env.VERSION }}
-          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.OSSRH_USERNAME }}
-          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.OSSRH_TOKEN }}
-          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.PGP_PRIVATE_KEY }}
-          ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.PGP_KEY_ID }}
-          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.PGP_PASSPHRASE }}
+          VERSION: "${{ env.VERSION }}"
+          ORG_GRADLE_PROJECT_mavenCentralUsername: "${{ secrets.OSSRH_USERNAME }}"
+          ORG_GRADLE_PROJECT_mavenCentralPassword: "${{ secrets.OSSRH_TOKEN }}"
+          ORG_GRADLE_PROJECT_signingInMemoryKey: "${{ secrets.PGP_PRIVATE_KEY }}"
+          ORG_GRADLE_PROJECT_signingInMemoryKeyId: "${{ secrets.PGP_KEY_ID }}"
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: "${{ secrets.PGP_PASSPHRASE }}"
