--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ import com.vanniktech.maven.publish.JavadocJar
 
 plugins {
     id 'java-library'
+    id 'signing'
     id "com.vanniktech.maven.publish" version "0.34.0"
 }
 
